--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ header img {
 }
 
 section {
-  max-width: 85vw;
+  max-width: 85;
   margin: 40px auto;
   background-color: #fff;
   padding: 40px;
